--- a/memefolder/Base.lproj/Main.storyboard
+++ b/memefolder/Base.lproj/Main.storyboard
@@ -16,22 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste Twitter URL here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PYo-Rj-TxV">
+                                <rect key="frame" x="25" y="396" width="364" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U31-l7-lph">
-                                <rect key="frame" x="184" y="438" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="109" y="438" width="196" height="30"/>
+                                <state key="normal" title="Go get da THUMBNAIL baby"/>
+                                <connections>
+                                    <action selector="buttonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5GD-fr-B24"/>
+                                </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R3l-jz-JhN">
+                                <rect key="frame" x="10" y="495" width="394" height="347"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="U31-l7-lph" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="4ZK-V1-frJ"/>
+                            <constraint firstItem="PYo-Rj-TxV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Hvi-a7-nHZ"/>
+                            <constraint firstItem="R3l-jz-JhN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="KmI-aN-hmg"/>
+                            <constraint firstItem="PYo-Rj-TxV" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" constant="-50" id="OwT-yJ-Usf"/>
+                            <constraint firstItem="U31-l7-lph" firstAttribute="top" secondItem="PYo-Rj-TxV" secondAttribute="bottom" constant="8" id="aI5-TO-SwE"/>
+                            <constraint firstItem="R3l-jz-JhN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.951691" id="axG-1V-SsT"/>
+                            <constraint firstItem="R3l-jz-JhN" firstAttribute="top" secondItem="U31-l7-lph" secondAttribute="bottom" constant="27" id="kYP-sB-RQY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R3l-jz-JhN" secondAttribute="bottom" constant="20" id="n2j-Mf-e97"/>
                             <constraint firstItem="U31-l7-lph" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="zXL-vb-5sz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="thumbnailDisplay" destination="R3l-jz-JhN" id="VT3-1H-SMk"/>
+                        <outlet property="twitterEntryText" destination="PYo-Rj-TxV" id="EjE-ms-gGq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="72"/>
+            <point key="canvasLocation" x="131.8840579710145" y="71.651785714285708"/>
         </scene>
     </scenes>
 </document>
