--- a/memefolder/Base.lproj/Main.storyboard
+++ b/memefolder/Base.lproj/Main.storyboard
@@ -8,65 +8,29 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--TwitterDL View Controller-->
+        <!--Initial View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="TwitterDLViewController" customModule="Meme_Folder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="InitialViewController" customModule="Meme_Folder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OaN-Lj-WZG">
-                                <rect key="frame" x="0.0" y="367.5" width="414" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste Twitter URL here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PYo-Rj-TxV">
-                                <rect key="frame" x="25" y="396" width="364" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U31-l7-lph">
-                                <rect key="frame" x="109" y="438" width="196" height="30"/>
-                                <state key="normal" title="Go get da THUMBNAIL baby"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akf-17-HIq">
+                                <rect key="frame" x="110" y="438" width="194" height="30"/>
+                                <state key="normal" title="Click to open URL pasty boy"/>
                                 <connections>
-                                    <action selector="buttonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5GD-fr-B24"/>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aw9-JF-S5G"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R3l-jz-JhN">
-                                <rect key="frame" x="10" y="495" width="394" height="347"/>
-                            </imageView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Aqa-WT-muJ">
-                                <rect key="frame" x="197" y="658.5" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="U31-l7-lph" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="4ZK-V1-frJ"/>
-                            <constraint firstItem="PYo-Rj-TxV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Hvi-a7-nHZ"/>
-                            <constraint firstItem="PYo-Rj-TxV" firstAttribute="top" secondItem="OaN-Lj-WZG" secondAttribute="bottom" constant="8" id="Iau-GE-ebB"/>
-                            <constraint firstItem="R3l-jz-JhN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="KmI-aN-hmg"/>
-                            <constraint firstItem="PYo-Rj-TxV" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" constant="-50" id="OwT-yJ-Usf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OaN-Lj-WZG" secondAttribute="trailing" id="Wrw-9B-NWa"/>
-                            <constraint firstItem="U31-l7-lph" firstAttribute="top" secondItem="PYo-Rj-TxV" secondAttribute="bottom" constant="8" id="aI5-TO-SwE"/>
-                            <constraint firstItem="R3l-jz-JhN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.951691" id="axG-1V-SsT"/>
-                            <constraint firstItem="Aqa-WT-muJ" firstAttribute="centerY" secondItem="R3l-jz-JhN" secondAttribute="centerY" id="cem-QI-p9K"/>
-                            <constraint firstItem="Aqa-WT-muJ" firstAttribute="centerX" secondItem="R3l-jz-JhN" secondAttribute="centerX" id="et8-J0-bed"/>
-                            <constraint firstItem="OaN-Lj-WZG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="h7c-MB-nZC"/>
-                            <constraint firstItem="R3l-jz-JhN" firstAttribute="top" secondItem="U31-l7-lph" secondAttribute="bottom" constant="27" id="kYP-sB-RQY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R3l-jz-JhN" secondAttribute="bottom" constant="20" id="n2j-Mf-e97"/>
-                            <constraint firstItem="U31-l7-lph" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="zXL-vb-5sz"/>
+                            <constraint firstItem="akf-17-HIq" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="1BW-3u-ASU"/>
+                            <constraint firstItem="akf-17-HIq" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="u22-au-EAc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="errorLabel" destination="OaN-Lj-WZG" id="hFY-Ju-bwe"/>
-                        <outlet property="errorLabelBottomConstraint" destination="Iau-GE-ebB" id="aVI-ow-XKp"/>
-                        <outlet property="imageLoadingActivityIndicator" destination="Aqa-WT-muJ" id="oSb-ec-EsV"/>
-                        <outlet property="thumbnailDisplay" destination="R3l-jz-JhN" id="VT3-1H-SMk"/>
-                        <outlet property="twitterEntryText" destination="PYo-Rj-TxV" id="EjE-ms-gGq"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
