--- a/YoutubeDL/controllers/TwitterDLViewController.xib
+++ b/YoutubeDL/controllers/TwitterDLViewController.xib
@@ -11,11 +11,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TwitterDLViewController" customModule="YoutubeDL" customModuleProvider="target">
             <connections>
                 <outlet property="errorLabel" destination="F1w-QK-TSc" id="tfW-hY-s2s"/>
-                <outlet property="errorLabelBottomConstraint" destination="Aa6-no-CxO" id="R9g-qQ-9H0"/>
                 <outlet property="imageLoadingActivityIndicator" destination="9sy-e2-DPZ" id="4SJ-2J-uCz"/>
-                <outlet property="imageOverlayBottomOffset" destination="YHa-ng-cve" id="fAa-oS-0ae"/>
                 <outlet property="thumbnailDisplay" destination="79k-Nf-jQh" id="CS2-6k-UsD"/>
-                <outlet property="twitterEntryText" destination="7Pk-51-Zzf" id="kLR-Pd-Gub"/>
                 <outlet property="view" destination="fO9-WW-xd3" id="SXn-2D-gvR"/>
             </connections>
         </placeholder>
@@ -24,91 +21,59 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1w-QK-TSc">
-                    <rect key="frame" x="0.0" y="367.5" width="414" height="20.5"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1w-QK-TSc">
+                    <rect key="frame" x="10" y="364" width="394" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste Twitter URL here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Pk-51-Zzf">
-                    <rect key="frame" x="25" y="396" width="364" height="34"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
-                    <connections>
-                        <action selector="buttonPushed:" destination="-1" eventType="editingDidEndOnExit" id="aQ2-Py-8zB"/>
-                    </connections>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="htW-IL-63j">
-                    <rect key="frame" x="109" y="438" width="196" height="30"/>
-                    <state key="normal" title="Go get da THUMBNAIL baby"/>
-                    <connections>
-                        <action selector="buttonPushed:" destination="-1" eventType="touchUpInside" id="XnN-HR-T6n"/>
-                    </connections>
-                </button>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="9sy-e2-DPZ">
+                    <rect key="frame" x="197" y="184" width="20" height="20"/>
+                </activityIndicatorView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zot-me-eYY" userLabel="Thumbnail Container View">
-                    <rect key="frame" x="10" y="495" width="394" height="347"/>
+                    <rect key="frame" x="10" y="44" width="394" height="300"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="79k-Nf-jQh" customClass="AspectFitImageView" customModule="YoutubeDL" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="394" height="347"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="79k-Nf-jQh">
+                            <rect key="frame" x="0.0" y="0.0" width="394" height="300"/>
                         </imageView>
-                        <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kiu-Mx-gR1">
-                            <rect key="frame" x="0.0" y="0.0" width="394" height="347"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="centerY" secondItem="zot-me-eYY" secondAttribute="centerY" id="0WP-eU-1Nz"/>
-                        <constraint firstItem="Kiu-Mx-gR1" firstAttribute="leading" secondItem="79k-Nf-jQh" secondAttribute="leading" id="4gg-BF-0qK"/>
-                        <constraint firstItem="Kiu-Mx-gR1" firstAttribute="trailing" secondItem="79k-Nf-jQh" secondAttribute="trailing" id="8jc-AM-wwz"/>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="width" relation="lessThanOrEqual" secondItem="zot-me-eYY" secondAttribute="width" id="PKY-xk-P0S"/>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="leading" secondItem="zot-me-eYY" secondAttribute="leading" priority="250" id="V3a-lL-M97"/>
-                        <constraint firstItem="Kiu-Mx-gR1" firstAttribute="bottom" secondItem="79k-Nf-jQh" secondAttribute="bottom" id="YHa-ng-cve"/>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="top" secondItem="zot-me-eYY" secondAttribute="top" priority="250" id="gOH-s1-OSi"/>
                         <constraint firstAttribute="bottom" secondItem="79k-Nf-jQh" secondAttribute="bottom" priority="250" id="gQY-FV-fCn"/>
                         <constraint firstAttribute="trailing" secondItem="79k-Nf-jQh" secondAttribute="trailing" priority="250" id="kNg-jt-bpO"/>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="height" relation="lessThanOrEqual" secondItem="zot-me-eYY" secondAttribute="height" id="o4X-Zc-IjR"/>
+                        <constraint firstAttribute="height" priority="250" constant="300" id="pqb-oC-URS"/>
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="centerX" secondItem="zot-me-eYY" secondAttribute="centerX" id="xqC-h2-Shd"/>
-                        <constraint firstItem="Kiu-Mx-gR1" firstAttribute="top" secondItem="79k-Nf-jQh" secondAttribute="top" id="z7A-WB-7sq"/>
                     </constraints>
                 </view>
-                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="9sy-e2-DPZ">
-                    <rect key="frame" x="197" y="658.5" width="20" height="20"/>
-                </activityIndicatorView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="twitter_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VBf-JA-uEU">
-                    <rect key="frame" x="183" y="65" width="48" height="48"/>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="gear_cloud" translatesAutoresizingMaskIntoConstraints="NO" id="r2q-oI-WtM">
-                    <rect key="frame" x="167" y="154" width="80" height="80"/>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QhD-DV-Vla" customClass="VideoControlsView" customModule="YoutubeDL" customModuleProvider="target">
+                    <rect key="frame" x="10" y="405" width="394" height="30"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="k8S-Ph-Zhi"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="FQh-RT-Aiu" firstAttribute="bottom" secondItem="zot-me-eYY" secondAttribute="bottom" constant="20" id="42i-BY-5tW"/>
-                <constraint firstItem="htW-IL-63j" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="6AQ-eK-JQo"/>
-                <constraint firstItem="VBf-JA-uEU" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="9VX-gp-Qru"/>
-                <constraint firstItem="7Pk-51-Zzf" firstAttribute="top" secondItem="F1w-QK-TSc" secondAttribute="bottom" constant="8" id="Aa6-no-CxO"/>
+                <constraint firstItem="QhD-DV-Vla" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="0q3-1Q-Cy9"/>
                 <constraint firstItem="9sy-e2-DPZ" firstAttribute="centerY" secondItem="zot-me-eYY" secondAttribute="centerY" id="AvB-47-Ziu"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="leading" secondItem="FQh-RT-Aiu" secondAttribute="leading" id="Bts-s8-FKD"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="top" secondItem="htW-IL-63j" secondAttribute="bottom" constant="27" id="Mrp-1w-eYB"/>
-                <constraint firstItem="r2q-oI-WtM" firstAttribute="top" secondItem="VBf-JA-uEU" secondAttribute="bottom" constant="41" id="OSE-qT-ccq"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="FDP-Sa-pMW"/>
+                <constraint firstItem="QhD-DV-Vla" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="Pl9-A2-ifV"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="QUB-gb-rRC"/>
                 <constraint firstItem="9sy-e2-DPZ" firstAttribute="centerX" secondItem="zot-me-eYY" secondAttribute="centerX" id="Sca-UW-bxO"/>
-                <constraint firstItem="htW-IL-63j" firstAttribute="top" secondItem="7Pk-51-Zzf" secondAttribute="bottom" constant="8" id="XNk-dF-gHm"/>
-                <constraint firstItem="7Pk-51-Zzf" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-50" id="dxi-Va-gpF"/>
-                <constraint firstItem="7Pk-51-Zzf" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="f5g-KF-QlB"/>
-                <constraint firstItem="VBf-JA-uEU" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" constant="21" id="hYb-k5-ChT"/>
-                <constraint firstItem="htW-IL-63j" firstAttribute="centerY" secondItem="FQh-RT-Aiu" secondAttribute="centerY" id="hef-kr-hla"/>
+                <constraint firstItem="zot-me-eYY" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="fTb-fG-NWo"/>
                 <constraint firstItem="zot-me-eYY" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="kbI-1R-Pdq"/>
-                <constraint firstItem="r2q-oI-WtM" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="pBP-l2-HBx"/>
                 <constraint firstItem="zot-me-eYY" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="pOk-ya-OV9"/>
-                <constraint firstItem="FQh-RT-Aiu" firstAttribute="trailing" secondItem="F1w-QK-TSc" secondAttribute="trailing" id="yCq-AF-wPQ"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="top" secondItem="zot-me-eYY" secondAttribute="bottom" constant="20" id="pXh-h9-xM8"/>
+                <constraint firstItem="QhD-DV-Vla" firstAttribute="top" secondItem="F1w-QK-TSc" secondAttribute="bottom" constant="20.5" id="rjf-2O-1CY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="FQh-RT-Aiu"/>
-            <point key="canvasLocation" x="132" y="719"/>
+            <point key="canvasLocation" x="131.8840579710145" y="718.52678571428567"/>
         </view>
     </objects>
-    <resources>
-        <image name="gear_cloud" width="80" height="80"/>
-        <image name="twitter_logo" width="48" height="48"/>
-    </resources>
 </document>
