--- a/YoutubeDL/controllers/TwitterDLViewController.xib
+++ b/YoutubeDL/controllers/TwitterDLViewController.xib
@@ -10,7 +10,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TwitterDLViewController" customModule="YoutubeDL" customModuleProvider="target">
             <connections>
-                <outlet property="blurOverlay" destination="om8-pD-DHy" id="YdR-A7-mGT"/>
                 <outlet property="errorLabel" destination="F1w-QK-TSc" id="tfW-hY-s2s"/>
                 <outlet property="progressBar" destination="E8h-SA-kV3" id="YAl-sZ-96V"/>
                 <outlet property="thumbnailDisplay" destination="79k-Nf-jQh" id="CS2-6k-UsD"/>
@@ -48,14 +47,6 @@
                         <constraint firstItem="79k-Nf-jQh" firstAttribute="centerX" secondItem="zot-me-eYY" secondAttribute="centerX" id="xqC-h2-Shd"/>
                     </constraints>
                 </view>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="om8-pD-DHy">
-                    <rect key="frame" x="5" y="44" width="404" height="300"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cjh-SH-hEY">
-                        <rect key="frame" x="0.0" y="0.0" width="404" height="300"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <blurEffect style="regular"/>
-                </visualEffectView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QhD-DV-Vla" customClass="VideoControlsView" customModule="YoutubeDL" customModuleProvider="target">
                     <rect key="frame" x="10" y="368" width="394" height="30"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -63,7 +54,7 @@
                         <constraint firstAttribute="height" constant="30" id="k8S-Ph-Zhi"/>
                     </constraints>
                 </view>
-                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-SA-kV3">
+                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-SA-kV3">
                     <rect key="frame" x="10" y="344" width="394" height="2"/>
                 </progressView>
             </subviews>
@@ -71,20 +62,16 @@
             <constraints>
                 <constraint firstItem="QhD-DV-Vla" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="0q3-1Q-Cy9"/>
                 <constraint firstItem="E8h-SA-kV3" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="9HE-sa-E8A"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="bottom" secondItem="om8-pD-DHy" secondAttribute="bottom" id="AiN-bH-JXg"/>
                 <constraint firstItem="F1w-QK-TSc" firstAttribute="top" secondItem="QhD-DV-Vla" secondAttribute="bottom" constant="10" id="EY0-CN-v5C"/>
                 <constraint firstItem="F1w-QK-TSc" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="FDP-Sa-pMW"/>
                 <constraint firstItem="E8h-SA-kV3" firstAttribute="width" secondItem="zot-me-eYY" secondAttribute="width" id="IcF-ZJ-VAi"/>
-                <constraint firstItem="QhD-DV-Vla" firstAttribute="top" secondItem="om8-pD-DHy" secondAttribute="bottom" constant="24" id="Lpn-dA-mAu"/>
-                <constraint firstItem="FQh-RT-Aiu" firstAttribute="top" secondItem="om8-pD-DHy" secondAttribute="top" id="NOU-q3-UAY"/>
                 <constraint firstItem="QhD-DV-Vla" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="Pl9-A2-ifV"/>
                 <constraint firstItem="F1w-QK-TSc" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="QUB-gb-rRC"/>
-                <constraint firstItem="om8-pD-DHy" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" multiplier="0.975845" id="RfS-UD-wWM"/>
+                <constraint firstItem="E8h-SA-kV3" firstAttribute="top" secondItem="79k-Nf-jQh" secondAttribute="bottom" id="a7q-DC-dyj"/>
                 <constraint firstItem="zot-me-eYY" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="fTb-fG-NWo"/>
                 <constraint firstItem="zot-me-eYY" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="kbI-1R-Pdq"/>
                 <constraint firstItem="zot-me-eYY" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="pOk-ya-OV9"/>
-                <constraint firstItem="E8h-SA-kV3" firstAttribute="top" secondItem="om8-pD-DHy" secondAttribute="bottom" id="rv8-bM-3Lo"/>
-                <constraint firstItem="om8-pD-DHy" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="udM-WC-tyR"/>
+                <constraint firstItem="QhD-DV-Vla" firstAttribute="top" secondItem="zot-me-eYY" secondAttribute="bottom" constant="24" id="vBF-p7-BER"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="FQh-RT-Aiu"/>
             <point key="canvasLocation" x="131.8840579710145" y="718.52678571428567"/>
