--- a/YoutubeDL/storyboards/VideoControlsView.xib
+++ b/YoutubeDL/storyboards/VideoControlsView.xib
@@ -7,21 +7,29 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoControlsView"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoControlsView">
+            <connections>
+                <outlet property="playPauseButton" destination="QJ0-3C-m6o" id="VLr-zl-Mf3"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" interfaceStyle="light" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="641" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJ0-3C-m6o">
-                    <rect key="frame" x="20" y="17" width="27.5" height="30"/>
+                    <rect key="frame" x="20" y="16" width="32" height="32"/>
+                    <color key="tintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="-2" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" image="play.fill" catalog="system">
+                    <state key="normal" image="play">
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" scale="large" weight="black"/>
                     </state>
+                    <connections>
+                        <action selector="playPauseTapped:" destination="-1" eventType="touchUpInside" id="nTJ-xE-GCE"/>
+                    </connections>
                 </button>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j49-Jj-V6t" userLabel="TimelineBase" customClass="RoundedCornerView" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="70.5" y="25" width="469" height="14"/>
+                    <rect key="frame" x="75" y="25" width="464.5" height="14"/>
                     <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="YZ8-M6-lJa"/>
@@ -56,6 +64,6 @@
         </view>
     </objects>
     <resources>
-        <image name="play.fill" catalog="system" width="58" height="64"/>
+        <image name="play" width="32" height="32"/>
     </resources>
 </document>
